<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/txtUpdateNoteHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/label_note_header"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUpdateNoteContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:autoLink="all"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/label_note_content"
        android:inputType="textMultiLine"
        android:isScrollContainer="false"
        android:maxLines="5"
        android:scrollbars="vertical"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:verticalScrollbarPosition="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtUpdateNoteHeader"
        app:layout_constraintTop_toBottomOf="@+id/txtUpdateNoteHeader" />

    <RatingBar
        android:id="@+id/updateRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:isIndicator="false"
        android:numStars="5"
        android:progressTint="@color/ic_launcher_background"
        android:rating="3"
        app:layout_constraintStart_toStartOf="@+id/lblUpdateNotePriority"
        app:layout_constraintTop_toBottomOf="@+id/lblUpdateNotePriority" />

    <TextView
        android:id="@+id/lblUpdateNotePriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/label_note_priority"
        app:layout_constraintStart_toStartOf="@+id/txtUpdateNoteContent"
        app:layout_constraintTop_toBottomOf="@+id/txtUpdateNoteContent" />

    <Button
        android:id="@+id/btnUpdateNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:elevation="@dimen/default_elevation"
        android:text="Kaydet"
        android:textColor="#FFFFFF"
        app:cornerRadius="@dimen/default_corner"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateRatingBar" />

    <Switch
        android:id="@+id/updateSwitchRemember"
        android:layout_width="129dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:checked="false"
        android:hint="Tarih Ekle"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/updateRatingBar"
        app:layout_constraintTop_toBottomOf="@+id/updateRatingBar" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:editable="false"
        android:hint="Date"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/updateSwitchRemember"
        app:layout_constraintTop_toBottomOf="@+id/updateSwitchRemember" />

</androidx.constraintlayout.widget.ConstraintLayout>